# ta

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  meson.build
.github/workflows/: cmake.yml  meson.yml
src/: CMakeLists.txt  ta.c  ta.h  ta_test.c
test/: CMakeLists.txt  test_ta.c
